# sam3dbody-demo

./: .gitignore  README.md  benchmark.py  demo.py  main.py  pyproject.toml  setup.sh  yolo_detector.py
