[project]
name = "3dposesam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "appdirs>=1.4.4",
    "cython>=3.2.4",
    "ninja",
    "setuptools>=60,<75",  # detectron2 uses pkg_resources which was removed in setuptools 75+
    "dill>=0.4.1",
    "einops>=0.8.2",
    "fvcore>=0.1.5.post20221221",
    "huggingface-hub[cli]>=1.4.1",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "hydra-submitit-launcher>=1.2.0",
    "joblib>=1.5.3",
    "jsonlines>=4.0.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "networkx==3.2.1",
    "numpy>=1.26,<2",
    "opencv-python>=4.11.0.86",
    "optree>=0.18.0",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pycocotools>=2.0.11",
    "pyopengl>=3.1.0",
    "pyrender>=0.1.45",
    "pyrootutils>=1.0.4",
    "pytorch-lightning>=2.6.1",
    "rich>=14.3.3",
    "roma>=1.5.6",
    "scikit-image>=0.26.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "timm>=1.0.24",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.3",
    "trimesh>=4.11.2",
    "webdataset>=1.0.2",
    "xtcocotools>=1.14.3",
    "yacs>=0.1.8",
    "detectron2",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }
detectron2 = { path = "vendor/detectron2" }

[tool.uv.extra-build-dependencies]
detectron2 = ["torch"]
